@@ -38,6 +38,7 @@ private:
 private:
 
 	void AddDiff(int s1, int e1, int s2, int e2);
+	void AddWord(const CString & str, wordarray * words, int s, int e, bool ws);
 	void AddWordDiff(int w1, int w2);
 	bool ExtendLastDiff(bool bLeftSide, int nEnd);
 	void HandleLeftOvers(int nLastWord, bool bInWordDiff);
